--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   springboot:
     container_name: mzregret
-    image: mzregret/develop:latest
+    image: iamjunseoplee/mzregret:latest
     ports:
       - 8080:8080
     environment:
